# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.42 2004/04/14 22:35:29 zhen Exp $

  14 Apr 2004; John Davis <zhen@gentoo.org>
  targets/embedded/embedded-chroot.sh,
  targets/embedded/embedded-preclean-chroot.sh, targets/embedded/embedded.sh,
  targets/grp/grp.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1.sh, targets/stage1/stage1-chroot.sh,
  targets/stage1/stage1-preclean1-chroot.sh, targets/stage1/stage1.sh,
  targets/stage2/stage2-chroot.sh, targets/stage2/stage2-preclean-chroot.sh,
  targets/stage2/stage2.sh, targets/stage3/stage3-chroot.sh,
  targets/stage3/stage3.sh, targets/tinderbox/tinderbox-chroot.sh,
  targets/tinderbox/tinderbox-preclean-chroot.sh,
  targets/tinderbox/tinderbox.sh:
  fix for bug #47733 - fixes for distcc and an envscript bugfix

  13 Apr 2004; John Davis <zhen@gentoo.org> modules/targets.py:
  fix for bug 47626

  12 Apr 2004; John Davis <zhen@gentoo.org> modules/catalyst_support.py,
  targets/embedded/cramfs-runscript.sh, targets/embedded/embedded-chroot.sh,
  targets/embedded/embedded-preclean-chroot.sh, targets/embedded/embedded.sh,
  targets/grp/grp-chroot.sh, targets/grp/grp-preclean-chroot.sh,
  targets/grp/grp.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1.sh, targets/stage1/stage1-chroot.sh,
  targets/stage1/stage1-preclean1-chroot.sh,
  targets/stage1/stage1-preclean2-chroot.sh, targets/stage1/stage1.sh,
  targets/stage2/stage2-chroot.sh, targets/stage2/stage2-preclean-chroot.sh,
  targets/stage2/stage2.sh, targets/stage3/stage3.sh,
  targets/tinderbox/tinderbox.sh:
  lots of cleanup on the bash backend. take a look @ the code and report bugs to
  zhen@gentoo.org please.
